style: fix theme-container height on mobile devices

--- a/src/stylesheets/globals.scss
+++ b/src/stylesheets/globals.scss
@@ -7,6 +7,10 @@ body {
   font-family: variable.$league-spartan, system-ui, sans-serif;
 }
 
+.theme-container {
+  min-height: 100vh;
+}
+
 //Themes
 .light {
   background-color: variable.$seasalt;
